# cefa

./: .gitignore  .windows_build_conan_profile  CMakeLists.txt  LICENSE.md  README.md  ROADMAP.md  conanfile.txt
src/: chord.cpp  chord.h  main.cpp  midiHandler.h  piano.cpp  piano.h  utils.h
